# topic-clustering

./: .gitignore  2013 Lead ISA topic clustering export (20 categories).csv  Bubbleplot.py  Bubbleplot_dash.py  LICENSE.txt  README.md  TFIDF encoding and NMF clustering.ipynb  UMAP_Visualization.ipynb  Visualization.ipynb  app.py  clustered.csv  clustered.pkl  lead for peter.csv  lemmatized.pkl  matplotlib visualization of Ozone ISA references.ipynb  refml topic clustering ozone ISA analysis.ipynb  requirements.txt  setup.cfg  stem and tokenize-ozonedata.ipynb  stem and tokenize.ipynb
.ipynb_checkpoints/: TFIDF encoding and NMF clustering-checkpoint.ipynb  Visualization-checkpoint.ipynb  stem and tokenize-checkpoint.ipynb  stem and tokenize-ozonedata-checkpoint.ipynb
eco hawc/mysite/main/: admin.py  models.py
eco hawc/mysite/mysite/: settings.py  urls.py
refml/: cli.py
refml/apps/: Night Shift Work and Light at Night_ Human cancer and biomonitoring studies (2018)-refs.xlsx  Ozone_included_refs.pkl  hawc_prototype.py  refml_app.py
refml/topic_modeling/: model.py  preprocess.py  refml_sql.py
