[metadata]
name = refml
version = 0.1
description = Scientific reference machine learning approaches
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[options]
include_package_data = true
packages = refml

[options.entry_points]
console_scripts =
    refml = refml:cli
